--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <div class="product-list" id="product-list">
 
             <div class="product">
-             <img src=".//img/tshirt3.jpg" alt="">
+             <img src="./img/tshirt3.jpg" alt="">
              <div class="p.details">
                 <h2 id="aaa">Tshirt for everyone</h2>
                 <h3>$25</h3>
              </div>
             </div>
             <div class="product">
-                <img src=".//img/watch1.jpg" alt="">
+                <img src="./img/watch1.jpg" alt="">
                 <div class="p.details">
                    <h2>Tranya Smart Watch</h2>
                    <h3>$25</h3>
